--- a/musicquizz/package.json
+++ b/musicquizz/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mui/material": "^5.0.2",
     "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -21,6 +22,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "sass": "^1.42.1",
+    "styled-components": "^5.3.1",
     "typescript": "~4.1.5"
   },
   "scripts": {
@@ -29,6 +31,12 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "format": "prettier --write \"{,!(node_modules)/**/}*.js\""
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
